SONAR-22649 remove usage of id generator that are incompatible with a large volume of data generated asynchronously.